hoja de estilo v2

--- a/estilos.css
+++ b/estilos.css
@@ -4,6 +4,7 @@
     text-decoration: none;
 }
 
+
 body{
     background:linear-gradient(#5656fd,#9ec8ff);
 }
@@ -20,6 +21,13 @@ textarea{
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
     border:  1px solid #a1d1f5;
 }
+textarea::placeholder{
+    color: #cae7ff;
+}
+
+textarea:focus {
+    background-color: #ddeffd;
+}
 
 input{
     border: none;
@@ -27,11 +35,20 @@ input{
     height: auto;
     margin: 0;
     outline: 0;
-    width: 100%;
+    width: auto;
     background-color: #a1d1f5;
     color: #64696d;
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
     border:  1px solid #a1d1f5;
+    height: 25px;
+}
+
+input::placeholder{
+    color: #cae7ff;
+}
+
+input:focus {
+    background-color: #ddeffd;
 }
 
 .botton1{
@@ -51,10 +68,16 @@ input{
     overflow: hidden;
     display: inline-block;
     border:  1px solid #64696d00;
+    transition: background-color 0.2s;
 }
 
 .botton1:hover {
     background-color: #42d0ff;
+    color: rgb(255, 255, 255);
+    border:  1px solid #008CBA;
+}
+.botton1:active{
+    background-color: #cef3ff;
     color: rgb(255, 255, 255);
     border:  1px solid #008CBA;
 }
@@ -70,8 +93,17 @@ input{
     /*border:  1px solid #4CAF50;*/
 }
 
+.verde:active{
+    background-color: #cef3ff;
+    color: rgb(255, 255, 255);
+    border:  1px solid #008CBA;
+}
 
-.rojo {background-color: #f44336;} /* Red */ 
+
+.rojo {
+    background-color: #f44336; 
+    border-radius:none;
+} /* Red */ 
 
 
 .rojo:hover{
@@ -79,14 +111,33 @@ input{
     color: rgb(255, 255, 255);
 }
 
+.rojo:active{
+    background-color: #ffcdc9;
+    color: rgb(255, 255, 255);
+}
+
+
+
+/*botton eliminar*/
 .delite{
-    background-image: url(deliteIcon.png);
-    background-position: center;
-    background-repeat: no-repeat;
     background-color: #f44336;
-    background-size: cover;
-    width:20px;
-    height: 20px;
+    height: 25px;
+    border: none;
+    color: rgb(255, 255, 255);
+    padding: 3px 0px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
+    cursor: pointer;
+    width:60px;
+    border-radius: 4px;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    display: inline-block;
+    border:  1px solid #c51919;
+    
 }
 
 
@@ -95,14 +146,75 @@ input{
     color: rgb(255, 255, 255);
 }
 
+.delite:active{
+    background-color: #ffd2cf;
+    color: rgb(255, 255, 255);
+    border:  1px solid #008CBA;
+}
+
+
+/*botton pegar*/
+.buttonPaste{
+    background-color: #4CAF50;
+    height: 25px;
+    border: none;
+    color: rgb(255, 255, 255);
+    padding: 3px 0px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
+    cursor: pointer;
+    width:50px;
+    border-radius: 0px 10px 10px 0px;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    display: inline-block;
+}
+
+
+.buttonPaste:hover{
+    background-color: #7af57e;
+    color: rgb(255, 255, 255);
+}
+
 
 .gris {background-color: #e7e7e7; color: black;} /* Gray */ 
 .negro {background-color: #555555;} /* Black */
 
+
+/*Boton copiar*/
+.buttonCopy{
+    margin: 3px 0px;
+    background-color: #008CBA;
+    height: 25px;
+    border: none;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
+    cursor: pointer;
+    width:50px;
+    border-radius: 10px 0 0 10px;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    display: inline-block;
+    border:  1px solid #008CBA;
+    
+}
+
+.buttonCopy:hover {
+    background-color: #42d0ff;
+    color: rgb(255, 255, 255);
+}
+
 /*select*/
 
 .seleccion{
-    max-width: 178px;
+    max-width: 200px;
     position: relative;
     
 }
@@ -118,14 +230,10 @@ input{
 	background-color: #a1d1f5;
     color: #64696d;
 	font-size: 1em;
-	font-family: 
-	'Quicksand', sans-serif;
+	font-family: 'Quicksand', sans-serif;
     border:2px solid rgba(83, 175, 250, 0.2);
     border-radius: 5px;
     position: relative;
-    transition: all 0.25s ease;
+   
 }
 
-.seleccion select:hover{
-	background: #bbe0fc;
-}
