--- a/estilos.css
+++ b/estilos.css
@@ -124,19 +124,20 @@ input:focus {
     height: 25px;
     border: none;
     color: rgb(255, 255, 255);
-    padding: 3px 0px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 15px;
-    cursor: pointer;
-    width:60px;
-    border-radius: 4px;
-    position: relative;
-    z-index: 1;
-    overflow: hidden;
-    display: inline-block;
+    /* padding: 3px 0px; */
+    /* text-align: center; */
+    /* text-decoration: none; */
+    /* display: inline-block; */
+    font-size: 12px;
+    /* cursor: pointer; */
+    width:25px;
+    border-radius: 12px; 
+    /* position: relative; */
+    /* z-index: 1; */
+    /* overflow: hidden; */
+    /* display: inline-block; */
     border:  1px solid #c51919;
+    font-weight: 900;
     
 }
 
