resalte de botones

--- a/estilos.css
+++ b/estilos.css
@@ -75,12 +75,12 @@ input:focus {
 .botton1:hover {
     background-color: #42d0ff;
     color: rgb(255, 255, 255);
-    border:  2px solid #008CBA;
+    border:  2px solid #76cbe7;
 }
 .botton1:active{
     background-color: #cef3ff;
     color: rgb(255, 255, 255);
-    border:  1px solid #008CBA;
+    border:  1px solid #5fd7ff;
 }
 
 .verde {
@@ -222,6 +222,14 @@ input:focus {
 .seleccion{
     max-width: 200px;
     position: relative;
+    border:  1px solid #b1b1b1;
+    border-radius: 5px;
+    
+}
+
+.seleccion:hover {
+    color: rgb(255, 255, 255);
+    border:  1px solid #ffffff;
     
 }
 
@@ -242,4 +250,6 @@ input:focus {
     position: relative;
    
 }
+
+
 
