--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,5 @@
 *{
-    margin:1;
+    margin:none;
     box-sizing: border-box;
     text-decoration: none;
 }
@@ -252,4 +252,38 @@ input:focus {
 }
 
 
-
+/* Estilo base para la barra de navegación */
+.sidebar {
+    width: 250px;
+    background-color: #f2f2f2;
+    border-right: 1px solid #ddd;
+  }
+  
+  /* Estilo para los elementos de la lista */
+  .sidebar ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .sidebar li {
+    margin: 0;
+    padding: 0;
+  }
+  
+  .sidebar li a {
+    display: block;
+    padding: 10px 15px;
+    text-decoration: none;
+    color: #333;
+  }
+  
+  /* Estilo para el enlace activo */
+  .sidebar li a.active {
+    background-color: #ddd;
+  }
+  
+  /* Estilo para los enlaces al pasar el ratón sobre ellos */
+  .sidebar li a:hover {
+    background-color: #eaeaea;
+  }
