--- a/estilos.css
+++ b/estilos.css
@@ -6,27 +6,69 @@
 
 
 body{
-    background:linear-gradient(#5656fd,#9ec8ff);
+
+    background-color: #2d82ba
+}
+
+/*select*/
+
+.seleccion{
+    max-width: 200px;
+    color: #4b4b4b;
+    position: relative;
+    background-color: #e8fbffb4;
+    border-radius: 5px;
+    border:  2px solid #29bdee;
+    
+}
+
+.seleccion:hover {
+    color: rgb(0, 0, 0);
+    border:  2px solid #29bdee;
+    background-color: #e8fbffb4;
+    
+}
+
+.seleccion select{
+    display: inline-block;
+	width: 100%;
+	cursor: pointer;
+  	height: 25px;
+  	outline: 0; 
+  	border: 0;
+	border-radius: 0;
+	background-color: #e8fbffb4;
+    color: #4b4b4b;
+	font-size: 1em;
+	font-family: 'Quicksand', sans-serif;
+    border:  2px solid #29bdee;
+
+    border-radius: 5px;
+    position: relative;
+   
 }
 
 textarea{
     border: none;
-    font-size: 15px;
+    font-size: 16px;
     height: auto;
     margin: 0;
     outline: 0;
     width: 100%;
-    background-color: #a1d1f5;
-    color: #64696d;
+    background-color: #e8fbffb4;
+    color: #4b4b4b;
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
-    border:  1px solid #a1d1f5;
+    border:  2px solid #29bdee;
+    border-radius: 5px;
+    font-weight: bold;
 }
 textarea::placeholder{
-    color: #cae7ff;
+    color: #ffffff;
 }
 
 textarea:focus {
-    background-color: #ddeffd;
+    background-color: #ffffff;
+    
 }
 
 input{
@@ -36,25 +78,27 @@ input{
     margin: 0;
     outline: 0;
     width: auto;
-    background-color: #a1d1f5;
+    background-color: #e8fbffb4;
     color: #64696d;
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
-    border:  1px solid #a1d1f5;
+    border:  2px solid #29bdee;
     height: 25px;
+    border-radius: 5px;
+    font-weight: bold;
 }
 
 input::placeholder{
-    color: #cae7ff;
+    color: #ffffffab;
 }
 
 input:focus {
-    background-color: #ddeffd;
+    background-color: #ffffff;
 }
 
 .botton1{
     background-color: #008CBA; /* Blue */
+    border:  2px solid #29bdee;
     height: 25px;
-    border: none;
     color: white;
     padding: 3px 0px;
     text-align: center;
@@ -68,7 +112,7 @@ input:focus {
     z-index: 1;
     overflow: hidden;
     display: inline-block;
-    border:  1px solid #64696d00;
+    
     transition: background-color 0.2s;
 }
 
@@ -83,7 +127,7 @@ input:focus {
 .botton1:active{
     background-color: #cef3ff;
     color: rgb(255, 255, 255);
-    border:  1px solid #5fd7ff;
+    border:  2px solid #a7e9ff;
 }
 
 .verde {
@@ -108,6 +152,7 @@ input:focus {
 .rojo {
     background-color: #f44336; 
     border-radius:none;
+    border:  2px solid #ff8282;
 } /* Red */ 
 
 
@@ -158,7 +203,7 @@ input:focus {
 .delite:active{
     background-color: #ffd2cf;
     color: rgb(255, 255, 255);
-    border:  1px solid #008CBA;
+    border:  1px solid #ff8282;
 }
 
 
@@ -220,76 +265,7 @@ input:focus {
     color: rgb(255, 255, 255);
 }
 
-/*select*/
 
-.seleccion{
-    max-width: 200px;
-    position: relative;
-    border:  1px solid #b1b1b1;
-    border-radius: 5px;
-    
-}
-
-.seleccion:hover {
-    color: rgb(255, 255, 255);
-    border:  1px solid #ffffff;
-    
-}
-
-.seleccion select{
-    display: inline-block;
-	width: 100%;
-	cursor: pointer;
-  	height: 25px;
-  	outline: 0; 
-  	border: 0;
-	border-radius: 0;
-	background-color: #a1d1f5;
-    color: #64696d;
-	font-size: 1em;
-	font-family: 'Quicksand', sans-serif;
-    border:2px solid rgba(83, 175, 250, 0.2);
-    border-radius: 5px;
-    position: relative;
-   
-}
-
-
-/* Estilo base para la barra de navegación */
-.sidebar {
-    width: 250px;
-    background-color: #f2f2f2;
-    border-right: 1px solid #ddd;
-  }
-  
-  /* Estilo para los elementos de la lista */
-  .sidebar ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .sidebar li {
-    margin: 0;
-    padding: 0;
-  }
-  
-  .sidebar li a {
-    display: block;
-    padding: 10px 15px;
-    text-decoration: none;
-    color: #333;
-  }
-  
-  /* Estilo para el enlace activo */
-  .sidebar li a.active {
-    background-color: #ddd;
-  }
-  
-  /* Estilo para los enlaces al pasar el ratón sobre ellos */
-  .sidebar li a:hover {
-    background-color: #eaeaea;
-  }
 
   /*ventana emergente*/
   #popup {
@@ -303,6 +279,17 @@ input:focus {
     box-shadow: 0 0 10px rgb(255, 255, 255);
     z-index: 9999;
   }
+
+/*Centrar elementos*/
+  .container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color:#2d82ba ;
+      border-radius: 5px;
+      margin: 2px;
+  }
+
   /*
   input[type="password"] {
     border: 1px solid gray;
